start on improved implementation

--- a/ryu/CMakeLists.txt
+++ b/ryu/CMakeLists.txt
@@ -3,7 +3,7 @@
 cmake_minimum_required(VERSION 3.0)
 include_directories(${CMAKE_CURRENT_LIST_DIR})
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
-add_library(ryu ryu/generic_128.c ryu/f2s.c ryu/d2fixed.c ryu/d2s.c)
+add_library(ryu ryu/f2s.c ryu/d2fixed.c ryu/d2s.c)
 
 target_include_directories(
     ryu PUBLIC
