--- a/format/CMakeLists.txt
+++ b/format/CMakeLists.txt
@@ -3,5 +3,5 @@ add_subdirectory(../ryu ./ryu)
 include_directories(${CMAKE_CURRENT_LIST_DIR})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
-add_executable(format print.cpp)
+add_executable(format print2.cpp)
 target_link_libraries(format ryu)
